--- a/src/index.html
+++ b/src/index.html
@@ -40,10 +40,10 @@
     Loading...
   </app>
 
-  <script type="text/javascript" src="/bower_components/jquery/dist/jquery.min.js"></script>
-  <script type="text/javascript" src="/bower_components/bootstrap/dist/js/bootstrap.js"></script>
-  <script type="text/javascript" src="/bower_components/bootstrap-table/dist/bootstrap-table.js"></script>
-  <script type="text/javascript" src="/bower_components/bootstrap-table/dist/locale/bootstrap-table-zh-CN.js"></script>
+  <!--<script type="text/javascript" src="/bower_components/jquery/dist/jquery.min.js"></script>-->
+  <!--<script type="text/javascript" src="/bower_components/bootstrap/dist/js/bootstrap.js"></script>-->
+  <!--<script type="text/javascript" src="/bower_components/bootstrap-table/dist/bootstrap-table.js"></script>-->
+  <!--<script type="text/javascript" src="/bower_components/bootstrap-table/dist/locale/bootstrap-table-zh-CN.js"></script>-->
   <!-- Google Analytics: change UA-71073175-1 to be your site's ID -->
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
