--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,8 @@
   <link rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="/bower_components/simple-line-icons/css/simple-line-icons.css">
   <link rel="stylesheet" href="/bower_components/bootstrap-table/dist/bootstrap-table.css">
+  <link rel="stylesheet" href="/bower_components/toastr/toastr.css">
+
   <link rel="stylesheet" href="/assets/css/style.css">
   <link rel="stylesheet" href="/assets/css/error.css">
 
