--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
   <link rel="stylesheet" href="/assets/css/style.css">
   <link rel="stylesheet" href="/assets/css/error.css">
 
-  <link rel="stylesheet" href="/assets/css/components.css">
+  <!--<link rel="stylesheet" href="/assets/css/components.css">-->
   <link rel="stylesheet" href="/assets/css/plugins.css">
   <link rel="stylesheet" href="/assets/css/layout.css">
   <link rel="stylesheet" href="/assets/css/themes/darkblue.css">
